[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Registration.gd" type="Script" id=2]
[ext_resource path="res://Assets/DroidSans.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -896.0
margin_bottom = -480.0
rect_scale = Vector2( 1.87501, 1.80001 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Userbox" type="LineEdit" parent="."]
margin_left = 414.682
margin_top = 318.908
margin_right = 558.682
margin_bottom = 342.908
placeholder_text = "Username"
placeholder_alpha = 0.7

[node name="Passbox" type="LineEdit" parent="."]
margin_left = 414.682
margin_top = 351.908
margin_right = 558.682
margin_bottom = 375.908
secret = true
placeholder_text = "Password"
placeholder_alpha = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConPassbox" type="LineEdit" parent="."]
margin_left = 414.682
margin_top = 386.908
margin_right = 558.682
margin_bottom = 410.908
secret = true
placeholder_text = "Confirm Password"
placeholder_alpha = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 311.0
margin_top = 432.908
margin_right = 409.0
margin_bottom = 452.908
text = "Back to login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reg" type="Button" parent="."]
margin_left = 437.682
margin_top = 432.908
margin_right = 535.682
margin_bottom = 452.908
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 558.682
margin_top = 432.908
margin_right = 658.682
margin_bottom = 452.908
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 300.0
margin_top = 40.0
margin_right = 704.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
text = "Tank Shooter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Max" type="Label" parent="."]
margin_left = 389.0
margin_top = 84.0
margin_right = 651.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 2 )
text = "Max account reached"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong" type="AcceptDialog" parent="."]
visible = true
margin_left = 389.0
margin_top = 154.0
margin_right = 626.0
margin_bottom = 273.0
popup_exclusive = true
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Reg" to="." method="_on_Reg_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="confirmed" from="Wrong" to="." method="_on_Wrong_confirmed"]
[connection signal="popup_hide" from="Wrong" to="." method="_on_Wrong_popup_hide"]
